flatpak-session: use forced-restart for in the session service.

--- a/src/flatpak-session@.service
+++ b/src/flatpak-session@.service
@@ -9,7 +9,8 @@ StandardInput=null
 StandardOutput=journal
 StandardError=journal
 PAMName=login
-ExecStart=/usr/bin/flatpak-session -vvv start
+RestartForceExitStatus=69
+ExecStart=/usr/bin/flatpak-session -vvv start -r 69
 
 [Install]
 WantedBy=multi-user.target
