flatpak-utils: cleanups, bug fixes, more command line options.
Embrionic session listing and signalling support, reshuffled a
lot of code... apparently to no avail, still pretty messy.

--- a/src/flatpak-session@.service
+++ b/src/flatpak-session@.service
@@ -10,6 +10,7 @@ StandardOutput=journal
 StandardError=journal
 PAMName=login
 RestartForceExitStatus=69
+Type=simple
 ExecStart=/usr/bin/flatpak-session -vvv start -r 69
 
 [Install]
