--- a/src/flatpak-session@.service
+++ b/src/flatpak-session@.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Automatic flatpak login session for user/remote %i.
 After=systemd-user-sessions.service network.service
+Before=flatpak-update.service
 
 [Service]
 User=%i
@@ -11,7 +12,7 @@ StandardError=journal
 PAMName=login
 RestartForceExitStatus=69
 Type=simple
-ExecStart=/usr/bin/flatpak-session -vvv start -r 69
+ExecStart=/usr/bin/flatpak-session -vvv start -w SIGCONT -r 69
 
 [Install]
 WantedBy=multi-user.target
