--- a/src/flatpak-session@.service
+++ b/src/flatpak-session@.service
@@ -12,7 +12,7 @@ StandardError=journal
 PAMName=login
 RestartForceExitStatus=69
 Type=simple
-ExecStart=/usr/bin/flatpak-session -vvv start -w SIGCONT -r 69
+ExecStart=/usr/bin/flatpak-session -vvv start -r 69
 
 [Install]
 WantedBy=multi-user.target
