--- a/src/flatpak-update.service
+++ b/src/flatpak-update.service
@@ -6,7 +6,7 @@ After=systemd-user-sessions.service network.service
 StandardInput=null
 StandardOutput=journal
 StandardError=journal
-ExecStart=/usr/bin/flatpak-session -vvv update --poll-interval 5m -s SIGCONT
+ExecStart=/usr/bin/flatpak-session -vvv update --poll-interval 5m
 
 [Install]
 WantedBy=multi-user.target
